[gd_scene load_steps=21 format=3 uid="uid://befh57cg3tm24"]

[ext_resource type="Script" uid="uid://qw3n3dhsjip2" path="res://enemies/scripts/enemy.gd" id="1_6cc7r"]
[ext_resource type="Texture2D" uid="uid://ci6oaqoi4u4xy" path="res://assets/sprites/animation_test.png" id="1_evtl2"]
[ext_resource type="Script" uid="uid://ct28a5ovxts7" path="res://scripts/node resources/health.gd" id="2_7qkrd"]
[ext_resource type="Script" uid="uid://b2xavgnhnekor" path="res://scripts/hitbox.gd" id="3_ec5fr"]
[ext_resource type="Script" uid="uid://b25ntns06y3kc" path="res://enemies/scripts/hurtbox.gd" id="3_fjv6h"]
[ext_resource type="PackedScene" uid="uid://bv2b50rofjqc4" path="res://scenes/node resources/health_bar.tscn" id="6_6edcp"]
[ext_resource type="Script" uid="uid://c118vejxqqnw2" path="res://enemies/scripts/enemy_health_bar.gd" id="7_ontt5"]
[ext_resource type="Theme" uid="uid://bvcwux0exg1y0" path="res://main_theme.tres" id="8_ontt5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ontt5"]
atlas = ExtResource("1_evtl2")
region = Rect2(2, 49, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yselg"]
atlas = ExtResource("1_evtl2")
region = Rect2(34, 49, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdit5"]
atlas = ExtResource("1_evtl2")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rcda"]
atlas = ExtResource("1_evtl2")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4l7e"]
atlas = ExtResource("1_evtl2")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a5xv"]
atlas = ExtResource("1_evtl2")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3o1q"]
atlas = ExtResource("1_evtl2")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpf3q"]
atlas = ExtResource("1_evtl2")
region = Rect2(160, 0, 32, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_aeyof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ontt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yselg")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdit5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rcda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4l7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a5xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3o1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpf3q")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17fi2"]
size = Vector2(23.7113, 47.3684)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mtvt"]
size = Vector2(13, 32.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gm37"]
size = Vector2(14, 32.5)

[node name="TestEnemy" type="CharacterBody2D"]
script = ExtResource("1_6cc7r")
metadata/_edit_group_ = true

[node name="Health" type="Node" parent="."]
script = ExtResource("2_7qkrd")
max_health = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_aeyof")
animation = &"idle"
frame_progress = 0.999121

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 0.75)
scale = Vector2(0.485, 0.665)
shape = SubResource("RectangleShape2D_17fi2")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="HitBox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_ec5fr")
damage = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-0.5, 0.25)
shape = SubResource("RectangleShape2D_5mtvt")

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("3_fjv6h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_5gm37")

[node name="HealthBar" parent="." instance=ExtResource("6_6edcp")]
visible = false
offset_left = -9.0
offset_top = -23.0
offset_right = 55.0
offset_bottom = -7.0
scale = Vector2(0.33, 0.33)
script = ExtResource("7_ontt5")
metadata/_edit_use_anchors_ = true

[node name="Choice" type="RichTextLabel" parent="."]
visible = false
offset_left = -45.0
offset_top = -34.0
offset_right = 237.0
offset_bottom = 128.0
scale = Vector2(0.33, 0.33)
theme = ExtResource("8_ontt5")
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "test"
horizontal_alignment = 1

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
